# neurofisio

./: .gitignore  01_explore_tuh_eeg.ipynb  CLAUDE.md  ONEPAGER_NEUROTRIAGE.md  REPORT.md  create_hf_datasets.py  create_hf_signal_datasets.py  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: eeg_explorer.py  run.sh
app/.streamlit/: config.toml
neurofisio/: __init__.py  edf.py  montage.py  parsers.py  viz.py
tests/: conftest.py  test_smoke.py
utils/: run_all_signal_datasets.sh  upload_remaining_hf.sh
